blah/traefik-deployment-Nodes.yml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik:v3.1
          args:
            - "--providers.kubernetescrd"
            - "--providers.kubernetesingress"
            - "--entrypoints.web.address=:80"
            - "--entrypoints.websecure.address=:443"

            # Let's Encrypt
            - "--certificatesresolvers.le.acme.email=darko@hojnik.de"
            - "--certificatesresolvers.le.acme.storage=/data/acme.json"
            - "--certificatesresolvers.le.acme.httpchallenge=true"
            - "--certificatesresolvers.le.acme.httpchallenge.entrypoint=web"

            - "--api.dashboard=true"

          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /data

      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
spec:
  type: NodePort
  ports:
    - name: web
      port: 80
      nodePort: 30080
    - name: websecure
      port: 443
      nodePort: 30443
  selector:
    app: traefik
