blah/webapp-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webapp
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`yeah.webterrorist.net`)
      kind: Rule
      services:
        - name: webapp
          port: 80
  tls:
    certResolver: letsencrypt
